# prefab-cloud-python

./: .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  buf.gen.yaml  compile_protos.sh  mypy.ini  prefab.proto  prefab_pb2.py  prefab_pb2.pyi  prefab_pb2_grpc.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  pre-commit.yaml
docs/: conf.py  index.rst
examples/: README.md
examples/gunicorn/: README.md  gunicorn_conf.py  pyproject.toml  test_app.py
examples/standard-logging/: README.md  pyproject.toml  standard-logger-example.py
examples/structlogger/: README.md  pyproject.toml  structlogger-example.py
prefab_cloud_python/: __init__.py  _internal_constants.py  _internal_setup.py  _processors.py  _requests.py  _sse_connection_manager.py  _structlog_processors.py  _telemetry.py  client.py  config_client.py  config_client_interface.py  config_loader.py  config_parser.py  config_resolver.py  config_value_unwrapper.py  config_value_wrapper.py  constants.py  context.py  context_shape.py  context_shape_aggregator.py  criteria_evaluator.py  encryption.py  feature_flag_client.py  log_path_aggregator.py  logger_client.py  logger_filter.py  logging.py  multi_processor.py  options.py  read_write_lock.py  semantic_version.py  simple_criterion_evaluators.py  structlog_multi_processor.py  weighted_value_resolver.py  yaml_parser.py
tests/: .prefab.unit_tests.config.yaml  __init__.py  helpers.py  prefab.datafile.json  test_api_client.py  test_client.py  test_config_client.py  test_config_loader.py  test_config_parser.py  test_config_resolver.py  test_config_value_unwrapper.py  test_config_value_wrapper.py  test_context.py  test_context_shape.py  test_context_shape_aggregator.py  test_criteria_evaluator.py  test_encryption.py  test_feature_flag_client.py  test_integration.py  test_log_path_aggregator.py  test_log_path_collector.py  test_logger_client.py  test_logger_filter.py  test_logging.py  test_options.py  test_semantic_version.py  test_simple_criterion_evaluators.py  test_sse_connection_manager.py  test_telemetry_context_accumulator.py  test_telemetry_evaluation_rollup.py  test_telemetry_manager.py  test_weighted_value_resolver.py  test_yaml_parser.py
