[tool.poetry]
name = "prefab-cloud-python"
version = "0.1.0"
description = ""
authors = ["Michael Berkowitz <michael.berkowitz@gmail.com>"]
readme = "README.md"
packages = [{include = "prefab_cloud_python"}]

[tool.poetry.dependencies]
python = ">= 3.10, < 4"
grpcio = "1.51.3"
grpcio-tools = "1.51.3"
pytest = "7.2.1"
pyyaml = "6.0.0"
mmh3 = "3.0.0"
urllib3 = "1.26"
structlog = "^22.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
