[tool.poetry]
name = "prefabclient-demo"
version = "0.1.0"
description = ""
authors = ["James Kebinger <james.kebinger@prefab.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefab-cloud-python = {path = "../../", develop = true}
cryptography = "^42.0.0"
requests = "^2.31.0"


[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
